# deep-learning-v2-pytorch

./: .gitignore  pyproject.toml  requirements.txt
intro-to-pytorch/: Part 1 - Tensors in PyTorch (Exercises).ipynb  Part 2 - Neural Networks in PyTorch (Exercises).ipynb  Part 3 - Training Neural Networks (Exercises).ipynb  Part 4 - Fashion-MNIST (Exercises).ipynb  Part 5 - Inference and Validation (Exercises).ipynb  Part 7 - Loading Image Data (Exercises).ipynb
