[tool.poetry]
name = "deep-learning-v2-pytorch"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
numpy = "^1.15"
opencv-python = "^3.4"
matplotlib = "^3.0"
pandas = "^0.23.4"
scipy = "^1.1"
pillow = "^5.3"
tqdm = "^4.28"
scikit-learn = "^0.20.1"
scikit-image = "^0.14.1"
h5py = "^2.8"
ipykernel = "^5.1"
bokeh = "^1.0"
pickleshare = "^0.7.5"
torch = "=0.4.1"
torchvision = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
